--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 #cake {
   display: block;
   position: relative;
-  margin: -10em auto 0 auto;
+  margin: -12em auto 0 auto;
 }
 
 /* ============================================== Candle
@@ -21,7 +21,7 @@ body {
   background: #ffffff;
   border-radius: 10px;
   position: absolute;
-  top: 228px;
+  top: 188px;
   left: 50%;
   margin-left: -2.5px;
   margin-top: -8.33333333px;
@@ -142,6 +142,7 @@ body {
   }
 }
 .text {
+  margin-top: 3rem;
   color: #8b6a60;
   font-family: 'Lato', sans-serif;
   font-weight: 300;
@@ -155,4 +156,54 @@ body {
   font-family:"digit";
   font-size:1.3em;
   color:IndianRed;
-};
+}
+
+/* 定义keyframe动画，命名为blink */
+
+@keyframes blink{
+  0%{opacity: 1;}
+  50%{opacity: 1;}
+  50.01%{opacity: 0;} /* 注意这里定义50.01%立刻透明度为０，可以设置闪烁效果 */
+  100%{opacity: 0;} 
+}
+
+/* 添加兼容性前缀 */
+
+@-webkit-keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 1; }
+    50.01% { opacity: 0; }
+    100% { opacity: 0; }
+}
+
+@-moz-keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 1; }
+    50.01% { opacity: 0; }
+    100% { opacity: 0; }
+}
+
+@-ms-keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 1; }
+    50.01% { opacity: 0; }
+    100% { opacity: 0; }
+}
+
+@-o-keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 1; }
+    50.01% { opacity: 0; }
+    100% { opacity: 0; }
+}
+
+/* 定义blink类*/
+.blink{
+    animation: blink .75s linear infinite;  
+    /* 其它浏览器兼容性前缀 */
+    -webkit-animation: blink .75s linear infinite;
+    -moz-animation: blink .75s linear infinite;
+    -ms-animation: blink .75s linear infinite;
+    -o-animation: blink .75s linear infinite;
+    color: #dd4814;
+}
